
(library
  (name      test_wodan)
  (modules   test_wodan)
  (libraries checkseum.c digestif.c irmin-test irmin-mem io-page-unix mirage-random-stdlib mirage-entropy-unix mirage-block-ramdisk wodan wodan-irmin))

(executable
  (name      test)
  (modules   test)
  (libraries test_wodan))

(alias
  (name runtest)
  (package wodan-irmin)
  (deps test.exe)
  (action (run %{dep:test.exe} -q --color=always)))
